chore(db): auto-apply EF Core migrations on startup to create Identity tables
chore(debug): inject ILogger and return detailed exception info in /register endpoint

git commit -m "chore(git): ignore local database and publish artifacts"

--- a/.gitignore
+++ b/.gitignore
@@ -396,3 +396,9 @@ FodyWeavers.xsd
 
 # JetBrains Rider
 *.sln.iml
+
+# Ignore local SQLite DB and publish artifacts
+app.db
+*.db
+publish/
+publish.zip
